# native-websocket-sharp

./: .editorconfig  .gitignore  .gitmodules  LICENSE.third-party.txt  README.md  justfile  native-websocket-sharp.slnx
.github/workflows/: build.yml  rs-clippy.yml  rs-fmt.yml  rs-test.yml  test.yml
WSMini/: WSMini.cs  WSMini.csproj
WebSocketSharp/: CloseEventArgs.cs  ErrorEventArgs.cs  Logging.cs  MessageEventArgs.cs  WebSocket.cs  packages.lock.json  websocket-sharp.csproj
WebSocketSharp.Tests/: UnitTest1.cs  WebSocketClientTests.cs  WebSocketSharp.Tests.csproj  packages.lock.json
WebSocketSharp/Native/: Enums.cs  NativeHelpers.cs  NativeLibLoader.cs  NativeStructures.cs  NativeWebSocketHandle.cs  WebSocketInterop.cs
WebSocketSharp/Net/: ClientSslConfiguration.cs
nativews/: .gitignore  Cargo.toml
nativews/src/: lib.rs  logging.rs
