[package]
name = "nativews"
version = "0.1.0"
edition = "2024"
authors = ["JKLeckr"]
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies.rustls]
version = "0.23.0"
default-features = false
features = ["std", "aws-lc-rs", "prefer-post-quantum", "tls12"]

[dependencies.tungstenite]
version = "0.27.0"
path = "lib/tungstenite"
features = ["rustls-tls-native-roots", "deflate"]
